@@ -1,3 +1,12 @@
+2009-12-03  Pavel Feldman  <pfeldman@chromium.org>
+
+        Not reviewed: chromium build fix.
+        r51621 changed JS bindings only, broke v8's.
+
+        * bindings/v8/ScriptFunctionCall.cpp:
+        (WebCore::ScriptFunctionCall::appendArgument):
+        * bindings/v8/ScriptFunctionCall.h:
+
 2009-12-03  Dimitri Glazkov  <dglazkov@chromium.org>
 
         Reviewed by Adam Barth.
